# termcolors

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
assets/: khaz.ssv
src/termcolors/: __about__.py  __init__.py  cli.py
src/termcolors/lib/: palette.py
src/termcolors/lib/m_utils/: aux.py  printing.py
src/termcolors/lib/softdev/: debug.py  user_input.py
src/termcolours/: __about__.py  cli.py
tests/: test_num_to_fg_ansi.py  test_whole_app.py
tmp/: blue15.ssv  colors.ssv  green15.ssv  reds15.ssv
