[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "termcolours"
dynamic = ["version"]
description = "Interactive terminal color picker"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "pykhaz" }]
dependencies = ["pyperclip"]

[project.scripts]
termcolours = "termcolours.cli:main"

[tool.hatch.version]
path = "src/termcolours/__about__.py"

[tool.hatch.envs.default]
dependencies = ["pytest>=7.4"]
develop = true

[tool.hatch.envs.test]
dependencies = ["pytest>=7.4"]
develop = true

[tool.hatch.envs.test.scripts]
test = "pytest -v"
