[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "termcolours"
dynamic = ["version"]
description = "Interactive terminal color picker"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "pykhaz" }]

dependencies = [
    "pyperclip"
]

[tool.hatch.version]
path = "src/termcolours/__about__.py"

[project.scripts]
termcolours = "termcolours.cli:main"

[tool.hatch.envs.test]
# środowisko testowe
dependencies = [
    "pytest>=7.0"
]
develop = true
scripts = { test = "pytest -v" }
