[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "termcolours"
dynamic = ["version"]
description = "Interactive terminal color picker"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "pykhaz" }]
dependencies = ["pyperclip"]

[tool.hatch.version]
path = "src/termcolours/__about__.py"

[project.scripts]
termcolours = "termcolours.cli:main"

[tool.hatch.build.targets.wheel]
# Wskazujemy, gdzie znajduje się kod źródłowy
packages = ["src/termcolours"]

[tool.hatch.build.targets.sdist]
# Możesz jawnie dołączyć folder, nawet jeśli nie jest w src (choć niezalecane)
include = [
    "/assets",
]

# Hatch environments (typy i testy)
[tool.hatch.envs.types.scripts]
test = "pytest {args:tests}"

# domyślne środowisko (opcjonalnie)
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"

# --------------------------------------
# środowisko testowe
# [tool.hatch.envs.test]
# dependencies = [
#     "pytest>=7.0",
# ]
# develop = true
# scripts = { test = "pytest -v" }
